--- a/apps/builder/.env
+++ b/apps/builder/.env
@@ -1,7 +1,7 @@
 # To override environment variables, add a .env.development file in the same directory.
 # For more details, visit: https://vitejs.dev/guide/env-and-mode#env-files
-DATABASE_URL=postgresql://postgres:pass@localhost/webstudio?pgbouncer=true
-DIRECT_URL=postgresql://postgres:pass@localhost/webstudio
+DATABASE_URL=postgresql://user:pass@localhost:5433/webstudio?pgbouncer=true
+DIRECT_URL=postgresql://user:pass@localhost:5433/webstudio
 
 AUTH_SECRET="# Linux: $(openssl rand -hex 32) or go to https://generate-secret.now.sh/64"
 # GH_CLIENT_SECRET=
@@ -57,5 +57,3 @@ USER_PLAN=pro
 # AI Features
 # OPENAI_KEY=
 # OPENAI_ORG=
-
-
