--- a/packages/cli/templates/cloudflare/package.json
+++ b/packages/cli/templates/cloudflare/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "@remix-run/cloudflare": "2.16.5",
-    "@remix-run/cloudflare-pages": "2.16.5"
+    "@remix-run/cloudflare-pages": "2.16.5",
+    "isbot": "^4"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240620.0",
